--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-vue": "^8.2.0",
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.23",
     "vite": "^2.7.13"
   }
