--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "dayjs": "^1.10.8",
     "sass": "^1.49.8",
+    "uuid": "^8.3.2",
     "vue": "^3.2.29"
   },
   "devDependencies": {
