--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dayjs": "^1.10.8",
     "sass": "^1.49.8",
     "uuid": "^8.3.2",
-    "vue": "^3.2.29"
+    "vue": "^3.2.29",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
